--- a/styles/index.css
+++ b/styles/index.css
@@ -152,8 +152,8 @@
 
 #jnBrandTab ul {
     position: absolute;
+    top: 10px;
     right: 0;
-    bottom: 0;
 }
 
 #jnBrandTab li {
@@ -202,6 +202,8 @@
 
 #jnBrandList {
     position: absolute;
+    top: 0;
+    left: 0;
 
     width: 3200px;
 }
@@ -216,7 +218,7 @@
     padding: 0 6px;
 }
 
-#jnBrandContent span {
+#jnBrandContent a + span {
     position: absolute;
     bottom: 0;
 
@@ -238,4 +240,9 @@
 
 #jnBrandContent span a:hover {
     color: #008cd7;
+}
+
+.imageOver {
+    background: url(../images/zoom.gif) #efefef no-repeat center center;
+    opacity: 0.6;
 }
